--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                                 Start
                             </button>
                         </div>
+                        <div class="col">
+                            <button class="nisbutton forceRead">
+                                Force Read
+                            </button>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="checkbox-header" title="Show materials/artefacts with a quantity greater than 0">
