--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                 <div id="menu" class="menu">
                     <div class="row">
                         <div class="col">
-                            <button class="nisbutton tracker">
+                            <button class="nisbutton tracker" title="Tracks screen for changes">
                                 Start
                             </button>
                         </div>
                         <div class="col">
-                            <button class="nisbutton forceRead">
+                            <button class="nisbutton forceRead" title="One-time read of screen">
                                 Force Read
                             </button>
                         </div>
