--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <div class="row">
                         <div class="col">
                             <button class="nisbutton tracker" title="Tracks screen for changes">
-                                Start
+                                Start Tracking
                             </button>
                         </div>
                         <div class="col">
                             <button class="nisbutton forceRead" title="One-time read of screen">
-                                Force Read
+                                Read Once
                             </button>
                         </div>
                     </div>
